src/test/ui/issues/issue-3XXXX/issue-34373.rs
#![allow(warnings)]

trait Trait<T> {
    fn foo(_: T) {}
}

pub struct Foo<T = Box<Trait<DefaultFoo>>>;  //~ ERROR cycle detected
type DefaultFoo = Foo;

fn main() {
}
